Apache ManifoldCF Plugin for Elastic Search change Log
$Id$

======================= 2.1-SNAPSHOT =====================

CONNECTORS-934 : Check if log level is enabled before constructing log message.
(Ahmet Arslan)

======================= Release 2.0 =====================

CONNECTORS-886: Add support for parent security.  This
change requires reindexing of all content supported by this plugin.
(Karl Wright)

======================= Release 1.1 =====================

Add functionality making the plugin compatible with multi-domain
features of ManifoldCF.  Specifically, create method signatures that
allow multiple domain/username pairs to be passed in.
(Karl Wright)

======================= Release 0.1 =====================

Added the path.data parameter in the ElasticSearch server: now the data folder is created under the target folder
(Karl Wright, Piergiorgio Lucidi)

Initial commit.
(Karl Wright)