@@ -1,8 +1,4 @@
 <!--
-   $HeadURL: http://svn.apache.org/repos/asf/httpcomponents/httpclient/trunk/src/main/assembly/bin-unix.xml $
-   $Revision: 687166 $
-   $Date: 2008-08-19 23:40:27 +0200 (Tue, 19 Aug 2008) $
-
    ====================================================================
    Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
